# wikifix

./: .gitignore  README.md  WIKIPEDIA_HIGHLIGHTING_SYSTEM.md  start.sh  verify_progress_bar_color.py
backend/: .env  _fake.py  alembic.ini  clone.py  download_wikipedia.py  inconsistent_claims.json  main.py  proxy.py  pyproject.toml  run_processor.py  wikipedia_processor.py
backend/alembic/: env.py
backend/alembic/versions/: 54027bef38e7_add_topics_and_languages_to_user.py  a005a366cbfe_add_referral_columns.py  b209a991f11f_add_updated_at_to_users.py
backend/api/: wikipedia.py
backend/db/: app.db  db.py  tasks_ops.py  user_ops.py
backend/preprocessing/: __init__.py  debug_chunk_breaking.py  debug_chunk_html.py  highlighting.py  html_sentence_splitter.py  pipeline.py  run_pipeline.py  run_processor.py  wikipedia_processor.py
backend/saved_site/en.wikipedia.org/wiki/: 1928_Winter_Olympics.html  2024_Summer_Olympics.html  2024_Summer_Olympics_medal_table.html  2024_in_Australian_sport.html  2024_in_California.html  2024_in_precision_sports.html  Australia_at_the_2024_Summer_Olympics.html  Australia_at_the_Olympics.html  Australian_Athletics_Team.html  Automotive_industry_in_the_United_States.chunk_debug.txt  Automotive_industry_in_the_United_States.html  BYD_Auto.html  Berlin_Wall.html  Berlin_Wall_Monument_(Chicago).html  Breaking_at_the_2024_Summer_Olympics.chunk_debug.txt  Breaking_at_the_2024_Summer_Olympics.html  Budapest_bid_for_the_2024_Summer_Olympics.html  Business_career_of_Elon_Musk.html  Business_idea.html  CRISPR.html  (+47 more)
backend/utils/: url_mapping.py
(+31 files in other folders)
