[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.1",
    "authlib>=1.6.0",
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "nltk>=3.9.1",
    "pyppeteer>=2.0.0",
    "rapidfuzz>=3.13.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "thefuzz>=0.22.1",
    "uvicorn>=0.34.2",
]
